Added shift schedule display

--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-<h1>Hello Again...</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shift Schedule</title>
+    <script src="script.js" defer></script>
+    <style>
+        table { width: 100%; border-collapse: collapse; margin-bottom: 20px; }
+        th, td { border: 1px solid black; padding: 8px; text-align: center; }
+        th { background-color: #f2f2f2; }
+    </style>
+</head>
+<body>
+    <h1>Shift Schedule</h1>
+    
+    <h2>Today's Day Shift</h2>
+    <div id="today-day-shift"></div>
+
+    <h2>Today's Night Shift</h2>
+    <div id="today-night-shift"></div>
+
+    <h2>Tomorrow's Day Shift</h2>
+    <div id="tomorrow-day-shift"></div>
+
+    <h2>Tomorrow's Night Shift</h2>
+    <div id="tomorrow-night-shift"></div>
+
+</body>
+</html>
